<resources>
    <string name="app_name">Open Tenure</string>
    <string name="preload">Opening image</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_new">New</string>
    <string name="action_import">Import</string>
    <string name="action_change_map_mode">Change map mode</string>
    <string name="action_add_from_gps">Add marker from GPS</string>
    <string name="action_add_boundary">Add boundary marker</string>
    <string name="action_add_non_boundary">Add non boundary marker</string>
    <string name="action_measure">Measure</string>
    <string name="action_export_geo">Export geographic data</string>
    <string name="action_done">Done</string>
    <string name="action_remove_attachment">Remove attachment</string>
    <string name="action_remove_owner">Remove rights owner</string>
    <string name="action_remove_additional_info">Remove information</string>
    <string name="action_remove_claim">Remove claim</string>
    <string name="action_remove_section_element">Remove element</string>
    <string name="action_camera">Camera</string>
    <string name="action_map">Map</string>
    <string name="action_switch_project">Switch project</string>
    <string name="action_init">Initialize</string>
    <string name="action_reinit">Reinitialize</string>
    <string name="action_export_log">Export log</string>
    <string name="action_boundaries_updated">Community area list has been updated</string>
    <string name="khmer_language">Khmer</string>
    <string name="albanian_language">Albanian</string>
    <string name="burmese_language">Myanmar</string>
    <string name="samoan_language">Samoa</string>
    <string name="default_language">Default</string>
    <string name="tiles_provider">Tiles Provider</string>
    <string name="tms_tiles_provider">TMS Tiles Provider</string>
    <string name="tms_tiles_provider_key">TMS</string>
    <string name="wtms_tiles_provider">WTMS Tiles Provider</string>
    <string name="wtms_tiles_provider_key">WTMS</string>
    <string name="geoserver_tiles_provider">GeoServer Tiles Provider</string>
    <string name="geoserver_tiles_provider_key">GeoServer</string>
    <string name="action_login">Log In</string>
    <string name="action_download_tiles">Download images to local data for offline map usage</string>
    <string name="action_logout">Log Out</string>
    <string name="action_backup_db">Backup local data</string>
    <string name="action_print">Print</string>
    <string name="action_save">Save</string>
    <string name="action_validate">Validate</string>
    <string name="action_go_to">Go to</string>
    <string name="action_center">Center GPS</string>
    <string name="action_select_bookmark">Go to bookmark</string>
    <string name="action_view_community_area">View Community Area</string>
    <string name="action_submit">Submit</string>
    <string name="action_view">View</string>
    <string name="action_download_file">Download File</string>
    <string name="action_download_claims">Download Claims</string>
    <string name="action_new_picture">New picture</string>
    <string name="action_new_additional_info">Add information</string>
    <string name="action_new_attachment">New document</string>
    <string name="action_to_group">Change in group</string>
    <string name="action_to_person">Change in person</string>
    <string name="action_lock_db">Configure data encryption</string>
    <string name="action_export">Export</string>
    <string name="action_rotate">Rotate map using device compass</string>
    <string name="action_stop_rotating">Stop rotating the map</string>
    <string name="action_modify_claimant">Modify Claimant</string>
    <string name="action_add_claimant">Add Claimant</string>
    <string name="action_select_challenge">Select Claim to Challenge</string>
    <string name="title_claim_challenge">Claim to Challenge</string>
    <string name="action_claim_map_snapshot">Attach a snapshot of this claim map</string>
    <string name="title_news">News</string>
    <string name="title_map">Community Map</string>
    <string name="title_claims">List of Claims</string>
    <string name="title_persons">Persons</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_challenged_claims">Challenged claims</string>
    <string name="title_challenged_claim">Challenged claim : </string>
    <string name="title_claim">Claim</string>
    <string name="title_person_details">Person details</string>
    <string name="title_group_details">Group details</string>
    <string name="title_claim_additional_info">Additional information</string>
    <string name="title_claim_documents">Documents</string>
    <string name="title_claim_photos">Claim photos</string>
    <string name="title_claim_map">Map</string>
    <string name="title_claim__downloading_map">Downloading Claim</string>
    <string name="title_claim_adjacencies">Adjacencies</string>
    <string name="title_claim_owners">Shares</string>
    <string name="title_share">Share</string>
    <string name="title_claim_challenges">Challenges</string>
    <string name="title_export">Exporting Claim as compressed file</string>
    <string name="title_import">Importing compressed Claim</string>
    <string name="title_section">Section</string>
    <string name="title_item">Item</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_claim">Open Tenure: New claim</string>
    <string name="title_i_m_here">Your location</string>
    <string name="title_activity_person">Open Tenure: New person</string>
    <string name="title_activity_group">Open Tenure: New group</string>
    <string name="title_activity_select_claim">Open Tenure: Select claim</string>
    <string name="title_activity_select_person">Open Tenure: Select person</string>
    <string name="title_activity_select_bookmark">Open Tenure: Select bookmark</string>
    <string name="title_activity_share_details">Open Tenure: Share details</string>
    <string name="title_activity_file_chooser">Choose a file</string>
    <string name="title_lock_db">Encrypt local data</string>
    <string name="title_confirm_data_transfer">Confirm data transfer</string>
    <string name="title_add_non_boundary">Add a non boundary location</string>
    <string name="title_add_map_bookmark">Add map bookmark</string>
    <string name="title_exit_dialog">Exit</string>
    <string name="title_initialization_process">Initialization Process</string>
    <string name="title_remove_person_dialog">Remove person</string>
    <string name="title_remove_claimant_dialog">Remove claimant</string>
    <string name="title_save_claim_dialog">The claim has been modified</string>
    <string name="title_save_boundary_dialog">Community area has been modified</string>
    <string name="title_save_person_dialog">The person has been modified</string>
    <string name="title_save_group_dialog">The group has been modified</string>
    <string name="title_no_connection">No connection</string>
    <string name="choose_file">Choose an application to select a file</string>
    <string name="person_name">Person Name</string>
    <string name="community_recorder_name">Community recorder</string>
    <string name="postal_address">Postal Address</string>
    <string name="email_address">Email Address</string>
    <string name="gender_masculine">Male</string>
    <string name="gender_feminine">Female</string>
    <string name="physical_person">Physical person</string>
    <string name="legal_person">Legal person</string>
    <string name="gender">Gender *</string>
    <string name="person_type">Person Type *</string>
    <string name="claim">Claim</string>
    <string name="date">Date</string>
    <string name="share_value">Percentage value : </string>
    <string name="add_owner">Add Owner </string>
    <string name="additional_info">Additional information</string>
    <string name="adjacency">Adjacency</string>
    <string name="adjacencies">Adjacent Properties</string>
    <string name="cardinal_direction">Cardinal direction</string>
    <string name="new_entity">New entity</string>
    <string name="by">By</string>
    <string name="occupiedSince">Occupied since</string>
    <string name="type">Type</string>
    <string name="na">N.A.</string>
    <string name="generated_on">Generated on</string>
    <string name="group_name">Name</string>
    <string name="signature">Signature</string>
    <string name="software_version_title">Software Version</string>
    <string name="claim_date">Claim date</string>
    <string name="claim_name">Claim name</string>
    <string name="claim_name_label">Claim name *</string>
    <string name="claim_type">Claim type *</string>
    <string name="claim_type_no_star">Claim type</string>
    <string name="default_claim_name">Draft</string>
    <string name="first_name">First name</string>
    <string name="first_name_label">First name *</string>
    <string name="last_name">Last name</string>
    <string name="last_name_label">Last name *</string>
    <string name="date_of_birth">Date of birth (YYYY-MM-DD)</string>
    <string name="date_of_birth_simple">Date of birth</string>
    <string name="date_of_birth_label">Date of birth *</string>
    <string name="message_claim_modified">Claim modified</string>
    <string name="map_provider_google_normal">Google Maps</string>
    <string name="map_provider_google_satellite">Google Earth</string>
    <string name="map_provider_google_hybrid">Google Hybrid</string>
    <string name="map_provider_google_terrain">Google Terrain</string>
    <string name="map_provider_osm_mapnik">Open Street Map MapNik</string>
    <string name="background_layers">Background Layers</string>
    <string name="map_provider_empty">Empty</string>
    <string name="user_layers">User Layers</string>
    <string name="add">Add</string>
    <string name="map_provider_osm_mapquest">Open Street Map MapQuest</string>
    <string name="map_provider_local_tiles">Local data</string>
    <string name="map_provider_geoserver">Tiles/WMS Server</string>
    <string name="cs_url_pref_title">Community Server URL</string>
    <string name="cs_url_pref_summary">The web address of the OpenTenure Community Server</string>
    <string name="cs_url_pref_dialog_title">Enter the URL of your OpenTenure Community Server</string>
    <string name="form_template_url_pref_title">Form URL</string>
    <string name="form_template_url_pref_summary">URL for the survey form</string>
    <string name="form_template_url_pref_dialog_title">Enter the URL for the survey form</string>
    <string name="language">Language</string>
    <string name="general">General</string>
    <string name="dynamic_form">Dynamic form</string>
    <string name="information">Information</string>
    <string name="advanced_settings">Advanced settings (don\'t touch unless you know what you are doing)</string>
    <string name="form_validation">Dynamic fields validation on submit</string>
    <string name="change_to_enable_form_validation">Change to enable dynamic fields validation</string>
    <string name="change_to_disable_form_validation">Change to disable dynamic fields validation</string>
    <string name="form_validation_on">On</string>
    <string name="form_validation_off">Off</string>
    <string name="hint_type_to_filter">Type some characters to filter the list</string>
    <string name="shares_prompt">Select shares</string>
    <string name="language_dialog_title">Select a language</string>
    <string name="action_add_hole">Add hole marker</string>
    <string name="action_refresh">Refresh</string>
    <string name="soft_delete">Soft delete of claims</string>
    <string name="soft_delete_details">Allows claims restoration after deletion</string>
    <string name="claim_number">Claim number</string>
    <string name="action_insert_boundary">Insert boundary marker</string>
</resources>