<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_save"
        android:icon="@drawable/save"
        android:title="@string/action_save"
        app:showAsAction="always" />
    <item android:id="@+id/action_change_map_mode"
            android:icon="@drawable/map_mode"
          android:title="@string/action_change_map_mode"
        android:showAsAction="always" >
        <menu>
            <item android:id="@+id/action_add_boundary"
                android:checkable="true"
                  android:title="@string/action_add_boundary" />
            <item android:id="@+id/action_measure"
                android:checkable="true"
                android:title="@string/action_measure" />
        </menu>
    </item>
    <item android:id="@+id/action_add_from_gps"
          android:icon="@android:drawable/ic_input_add"
          android:title="@string/action_add_from_gps"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_rotate"
          android:icon="@drawable/screenrotation"
          android:title="@string/action_rotate"
        app:showAsAction="ifRoom" />
	<item android:id="@+id/action_stop_rotating"
          android:icon="@drawable/stop"
          android:title="@string/action_stop_rotating"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_go_to"
          android:icon="@drawable/position"
          android:title="@string/action_go_to"
        app:showAsAction="ifRoom" >
        <menu>
            <item android:id="@+id/action_center_and_follow"
                  android:title="@string/action_center" />
            <item android:id="@+id/action_select_bookmark"
                  android:title="@string/action_select_bookmark" />
            </menu>
    </item>

</menu>
