<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_init"
        android:icon="@android:drawable/ic_dialog_alert"
        android:title="@string/action_init"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_login"
        android:icon="@drawable/login"
        android:title="@string/action_login"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_logout"
        android:icon="@drawable/logout"
        android:title="@string/action_logout"
        android:showAsAction="never" />
    <item android:id="@+id/action_switch_project"
        android:title="@string/action_switch_project"
        android:showAsAction="never" />
    <item android:id="@+id/action_reinit"
        android:title="@string/action_reinit"
        android:showAsAction="never" />
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
        android:showAsAction="never" />
    <item android:id="@+id/action_lock"
        android:icon="@drawable/lock"
        android:title="@string/action_lock_db"
        android:showAsAction="never" />
     <item android:id="@+id/action_showcase"
          android:title="@string/action_showcase"
         android:showAsAction="never" />
     <item android:id="@+id/action_export_log"
          android:title="@string/action_export_log"
         android:showAsAction="never" />
     
</menu>