<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_download_tiles"
          android:icon="@drawable/ic_download_tiles"
          android:title="@string/action_download_tiles"
          android:showAsAction="always" />

    <item android:id="@+id/action_center_community_area"
          android:icon="@android:drawable/ic_dialog_map"
          android:title="@string/action_view_community_area"
          android:showAsAction="always" />
    <item android:id="@+id/action_center_and_follow"
          android:icon="@drawable/position"
          android:title="@string/action_center"
          android:showAsAction="always" />
    <item android:id="@+id/action_download_claims"
        android:icon="@drawable/cloud"
        android:title="@string/action_download_claims"
        android:showAsAction="always" />
</menu>