<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:openTenure="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/action_new"
          android:icon="@drawable/flag"
          android:title="@string/action_new"
          android:showAsAction="always" 
          android:orderInCategory="2"/>
    <item android:id="@+id/action_refresh"
        android:icon="@drawable/cloud"
        android:title="@string/action_refresh"
        android:showAsAction="always"
        android:orderInCategory="2"/>
    <item android:id="@+id/action_login"
          android:icon="@drawable/login"
          android:title="@string/action_login"
          android:showAsAction="ifRoom" 
          android:orderInCategory="3"/>
    <item android:id="@+id/action_logout"
          android:icon="@drawable/logout"
          android:title="@string/action_logout"          
          android:showAsAction="ifRoom" 
          android:orderInCategory="4"/>
</menu>