<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_background_opentenure"
    android:baselineAligned="false"
    android:orientation="vertical">

    <EditText
        android:id="@+id/filter_input_field"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:autofillHints=""
        android:background="@color/dark_background_opentenure"
        android:drawableEnd="@android:drawable/ic_search_category_default"
        android:hint="@string/hint_type_to_filter"
        android:inputType="text"
        android:padding="10dp"></EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSortByCreationDate"
            style="@style/Button.Sort.Descending"
            android:backgroundTint="#A2CC30"
            android:text="@string/occupiedSince" />

        <Button
            android:id="@+id/btnSortByClaimDesc"
            style="@style/Button.Sort"
            android:text="@string/claim_name" />

        <Button
            android:id="@+id/btnSortByClaimNum"
            style="@style/Button.Sort"
            android:text="@string/claim_number" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:layout_weight="0" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/light_background_opentenure"
        android:drawSelectorOnTop="true">

    </ListView>

</LinearLayout>