<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background_opentenure"
    android:orientation="horizontal"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="13"
        android:background="@color/light_background_opentenure"
        android:orientation="vertical"
        android:padding="0dp" 
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/share_slogan"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/dark_background_opentenure"            
            android:text="@string/message_claim_modified" />

        <TextView
            android:id="@+id/share_owners_num"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@drawable/item_color"
            android:text="@string/title_item" />
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="10dp"
        android:layout_height="10dp"        
         ></LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:background="@android:color/white"
         >

        <Spinner
            android:id="@+id/share_shares"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:entries="@array/share_values"
            android:prompt="@string/shares_prompt" />
    </LinearLayout>

    <ImageView
        android:id="@+id/remove_icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:contentDescription="@string/action_remove_owner"
        android:src="@android:drawable/ic_delete" />

</LinearLayout>